Fixed Index white gap on the right

--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -154,7 +154,7 @@ body:has(a[href*="/"]):has(.home) {
 
       .third-prize {
         grid-row: 3 / 4;
-        grid-column: 5 / 6;
+        grid-column: 4 / 5;
       }
     }
   }
